<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#C1F8C1"
        >


        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="900dp"-->
<!--                android:layout_marginTop="-60dp"-->
<!--                android:layout_marginStart="-50dp"-->
<!--                android:layout_marginBottom="-110dp"-->
<!--                android:src="@drawable/background9"-->
<!--                />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_gravity="center_vertical"
                    android:background="#b2eefc">

                    <ImageButton
                        android:id="@+id/btn_back_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="8dp"
                        android:background="#b2eefc"
                        android:src="@drawable/ic_baseline_arrow_back"
                        app:tint="@color/black" />

                    <TextView
                        android:id="@+id/text_edit_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="144dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_edit"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="145dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/image_profile" />



                <Button
                    android:id="@+id/btn_change_profilepic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btn_profilePic_change"
                    android:textColor="#57a0d4"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/email"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/username"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_change_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/btn_username_change"
                    android:textColor="#57a0d4"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/password"
                        android:textSize="24sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginLeft="12dp"
                        android:textSize="24sp"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/btn_password_change"
                    android:textColor="#57a0d4"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="236dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="#2196F3"
                    android:text="@string/btn_update"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_delete_account"
                    android:layout_width="236dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"

                    android:backgroundTint="#F44336"
                    android:text="@string/btn_delete_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</ScrollView>