<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background11"
    android:orientation="vertical"
    tools:context=".ReportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtIssueCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/select_the_issue_category"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.reginald.editspinner.EditSpinner
                android:id="@+id/spinnerCategory"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txtReportLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/where_did_it_took_place"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <com.reginald.editspinner.EditSpinner
                android:id="@+id/spinnerLocation"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txtReportDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/describe_the_issue_in_detail"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtReportDesc"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtReportImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/upload_a_photo_as_proof"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/crd_upload"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="#838282"
                app:cardCornerRadius="30dp"
                app:strokeColor="#989898"
                app:strokeWidth="5dp">

                <ImageButton
                    android:id="@+id/btn_upload_image"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_publish_24" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnReportSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/report_submit" />

</LinearLayout>