<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFE8E8"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/splash_imageview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="fitStart"
                android:src="@drawable/blue_shape" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    >

                    <ImageButton
                        android:id="@+id/btn_back"
                        android:layout_marginStart="5dp"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginTop="10dp"
                        android:background="#b2eefc"
                        android:src="@drawable/ic_baseline_arrow_back"
                        app:tint="@color/black" />

                    <ImageButton
                    android:id="@+id/btn_edit_profile"
                    android:layout_marginStart="295dp"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:background="#b2eefc"
                    android:src="@drawable/ic_baseline_edit_profile"
                    app:tint="@color/black" />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/image_profile" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="username"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="email"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

        </FrameLayout>



        <androidx.cardview.widget.CardView
            android:id="@+id/crd_vaccination"
            android:layout_width="336dp"
            android:layout_height="186dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="#D8D8D8"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_status_vaccination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/vaccination_status"
                    android:textColor="#6A6767"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_vaccination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="UNKNOWN"
                    android:textColor="#6A6767"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_update_vacc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#6A6767"
                    android:text="@string/btn_vacc_update"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crd_covid_risk"
            android:layout_width="336dp"
            android:layout_height="186dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#D8D8D8"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_status_covidrisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/covid_risk_status"
                    android:textColor="#6A6767"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_covidrisk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="UNKNOWN"
                    android:textColor="#6A6767"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_update_covid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="#6A6767"
                    android:text="@string/btn_covidRisk_update"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="236dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="#4A4949"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="#b2eefc"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>